--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.7.2",
     "bulma": "^0.9.3",
     "easybase-react": "^2.2.13",
+    "htmlparser2": "^7.2.0",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "jwt-decode": "^3.1.2",
