--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-scripts": "5.0.0",
     "react-slideshow-image": "^3.6.0",
     "web-vitals": "^2.1.2"
