--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "react-slideshow-image": "^3.6.0",
     "web-vitals": "^2.1.2"
