--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "4.0",
     "bootstrap-icons": "^1.7.2",
     "bulma": "^0.9.3",
     "easybase-react": "^2.2.13",
