--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "jwt-decode": "^3.1.2",
+    "prisma": "^4.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
